Added a visualization step in the preliminary final project notebook
This will help with the prescreen of the dataset early on and make sure it will work for the final project
I also changed 1 of the grader checks in the final project (we are now only requiring a minimum of 2 categorical and 4 numerical variables in the dataset)

--- a/project/pre_finalProject.ipynb
+++ b/project/pre_finalProject.ipynb
@@ -191,6 +191,41 @@
    "source": [
     "<!-- END QUESTION -->\n",
     "\n",
+    "Now, we are ready to investigate our data visually!\n",
+    "\n",
+    "**Question 1.5:** Think about the numerical variables in the dataset that might be related to each other.  In the cell below, make at least three different scatter plots that show the relationship between different variables while also displaying how each case is classified.\n",
+    "\n",
+    "Use the following line of code:\n",
+    "\n",
+    "**my_data.scatter(`Column 1`, `Column 2`, group=`label`)**\n",
+    "\n",
+    "Replace `Column 1` and `Column 2` with the correct column names of numerical variables(features) you would like to investigate. Replace `label` with the column name of the categorical variable you would like to try to classsify.\n",
+    "\n",
+    "Note: The commented code in the cell below is sample code for this.\n",
+    "\n",
+    "Look at the scatter plots: do they provide additional insight into your answer for question 1.4? Based on this visual data, feel free to revise your response to question 1.4 if necessary. If you're unsure how to interpret the visualizations, check in with your instructor and ask for help."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Here is the code placeholder to use, uncomment the line and adjust according to the names if the columns in your dataset:\n",
+    "# my_data.scatter(\"Column 1\", \"Column 2\", group=\"label\")\n",
+    "\n",
+    "...\n",
+    "...\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Congratulations**: You're DONE with the preliminary notebook assignment for the final project! Nice work.\n",
     " \n",
     "Time to submit."
@@ -213,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.7"
   },
   "otter": {
    "OK_FORMAT": true,
